samples/_failures_safe/1761428304_212ba1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86325401.c: In function ‘main’:
./samples/SAFE/__tmp_86325401.c:166:18: error: expected ‘]’ at end of input
  166 |         input[len
      |                  ^
      |                  ]
./samples/SAFE/__tmp_86325401.c:166:9: error: expected declaration or statement at end of input
  166 |         input[len
      |         ^~~~~
./samples/SAFE/__tmp_86325401.c:166:9: error: expected declaration or statement at end of input
